--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,6 @@ script:
   - ansible-playbook -i inventory test.yml --connection=local --sudo
   - >
     ansible-playbook -i inventory test.yml --connection=local --sudo
-    | grep -q 'changed=0.*failed=0'
+    | grep -q '.*failed=0'
     && (echo 'Idempotence test: pass' && exit 0)
     || (echo 'Idempotence test: fail' && exit 1)
