Added nginx test

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,10 @@ env:
   matrix:
   - ANSIBLE_VERSION=1.9.4 ANSIBLE_PLAYBOOK_FILE=common.yml
   - ANSIBLE_VERSION=1.9.4 ANSIBLE_PLAYBOOK_FILE=ruby.yml
+  - ANSIBLE_VERSION=1.9.4 ANSIBLE_PLAYBOOK_FILE=nginx.yml
   - ANSIBLE_VERSION=2.1.2 ANSIBLE_PLAYBOOK_FILE=common.yml
   - ANSIBLE_VERSION=2.1.2 ANSIBLE_PLAYBOOK_FILE=ruby.yml
+  - ANSIBLE_VERSION=2.1.2 ANSIBLE_PLAYBOOK_FILE=nginx.yml
 
 before_install:
 - sudo apt-get update -qq
