--- a/meta/main.yml
+++ b/meta/main.yml
@@ -8,5 +8,11 @@ galaxy_info:
   - name: Ubuntu
     versions:
     - all
+  galaxy_tags:
+    - web
+    - development
+    - system
+    - security
+    - ubuntu
 
 dependencies: []
