--- a/roles/ruby/handlers/main.yml
+++ b/roles/ruby/handlers/main.yml
@@ -1,5 +1,4 @@
 ---
 - name: Rbenv rehash
   shell: cd; bash -lc "rbenv rehash"
-  sudo: yes
-  sudo_user: "{{ deploy_user }}"
+  become_user: "{{ deploy_user }}"
