--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -1,10 +1,10 @@
 ---
 - include: install.yml
-  sudo: true
+  become_user: root
   tags:
     - nginx
 
 - include: configure.yml
-  sudo: true
+  become_user: root
   tags:
     - nginx
