Added user password hashing

--- a/roles/security/defaults/main.yml
+++ b/roles/security/defaults/main.yml
@@ -4,8 +4,7 @@ security_default_packages:
   - ufw
   - unattended-upgrades
 security_sudoer_username: uadmin
-# forced to set by the user
-# security_sudoer_password:
+security_sudoer_password: upass
 security_ssh_port: 22
 security_ssh_public_keys: []
 security_ufw_allowed_ports:
