--- a/vagrant.yml
+++ b/vagrant.yml
@@ -1,4 +1,10 @@
 - hosts: all
+  # fix for Ubuntu 15.04+
+  # http://stackoverflow.com/a/34402816/541961
+  gather_facts: no
+  pre_tasks:
+    - name: Install python2
+      raw: sudo apt-get -y install python-simplejson
   roles:
     - common
     - swap
