--- a/roles/common/defaults/main.yml
+++ b/roles/common/defaults/main.yml
@@ -3,44 +3,45 @@ deploy_user: www-data
 deploy_user_home: /var/www
 deploy_ssh_public_keys: []
 common_packages:
-  - build-essential
   - aptitude
-  - python-apt
-  - python-software-properties
-  - python-dev
-  - python-setuptools
-  - python-mysqldb
-  - software-properties-common
-  - libpq-dev
-  - libjpeg62
-  - libjpeg62-dev
-  - libfreetype6
-  - libfreetype6-dev
-  - libreadline6
-  - libreadline6-dev
-  - libreadline-dev
-  - libsqlite3-0
-  - libsqlite3-dev
-  - libssl-dev
-  - libyaml-dev
-  - libc6-dev
-  - libncurses5-dev
-  - libtool
-  - libxml2-dev
-  - libxslt1-dev
-  - git
-  - multitail
-  - htop
-  - sloccount
-  - curl
   - autoconf
   - automake
   - bison
+  - build-essential
+  - curl
   - exuberant-ctags
+  - git
+  - htop
+  - imagemagick
+  - libc6-dev
+  - libfreetype6
+  - libfreetype6-dev
+  - libjpeg62
+  - libjpeg62-dev
+  - libncurses5-dev
+  - libpq-dev
+  - libreadline-dev
+  - libreadline6
+  - libreadline6-dev
+  - libsqlite3-0
+  - libsqlite3-dev
+  - libssl-dev
+  - libtool
+  - libxml2-dev
+  - libxslt1-dev
+  - libyaml-dev
+  - multitail
   - openssl
+  - python-apt
+  - python-dev
+  - python-mysqldb
+  - python-setuptools
+  - python-software-properties
+  - sloccount
+  - software-properties-common
   - sqlite3
   - subversion
-  - imagemagick
+  - tmux
+  - vim
   - zlib1g
   - zlib1g-dev
-  - vim
