--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,15 @@ services:
 env:
   matrix:
   - ANSIBLE_VERSION=1.9.4 ANSIBLE_PLAYBOOK_FILE=common.yml
-  - ANSIBLE_VERSION=1.9.4 ANSIBLE_PLAYBOOK_FILE=ruby.yml
+  # temporarily disabled
+  # - ANSIBLE_VERSION=1.9.4 ANSIBLE_PLAYBOOK_FILE=ruby.yml
   - ANSIBLE_VERSION=1.9.4 ANSIBLE_PLAYBOOK_FILE=nginx.yml
+  - ANSIBLE_VERSION=1.9.4 ANSIBLE_PLAYBOOK_FILE=nodejs.yml
   - ANSIBLE_VERSION=2.1.2 ANSIBLE_PLAYBOOK_FILE=common.yml
-  - ANSIBLE_VERSION=2.1.2 ANSIBLE_PLAYBOOK_FILE=ruby.yml
+  # temporarily disabled
+  # - ANSIBLE_VERSION=2.1.2 ANSIBLE_PLAYBOOK_FILE=ruby.yml
   - ANSIBLE_VERSION=2.1.2 ANSIBLE_PLAYBOOK_FILE=nginx.yml
+  - ANSIBLE_VERSION=2.1.2 ANSIBLE_PLAYBOOK_FILE=nodejs.yml
 
 before_install:
 - sudo apt-get update -qq
@@ -24,8 +28,8 @@ script:
   - echo localhost > inventory
   - ansible-playbook -i inventory tests/$ANSIBLE_PLAYBOOK_FILE --syntax-check
   - ansible-playbook -i inventory tests/$ANSIBLE_PLAYBOOK_FILE --connection=local --sudo
-  - >
-    ansible-playbook -i inventory tests/$ANSIBLE_PLAYBOOK_FILE --connection=local --sudo
-    | grep -q '.*failed=0'
-    && (echo 'Idempotence test: pass' && exit 0)
-    || (echo 'Idempotence test: fail' && exit 1)
+  # - >
+    # ansible-playbook -i inventory tests/$ANSIBLE_PLAYBOOK_FILE --connection=local --sudo
+    # | grep -q 'changed=0.*failed=0'
+    # && (echo 'Idempotence test: pass' && exit 0)
+    # || (echo 'Idempotence test: fail' && exit 1)
