Extracted bash configuration (fixes #4)

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -13,3 +13,9 @@
   become_user: root
   tags:
     - common
+
+- include: configure-bash.yml
+  become_user: "{{ deploy_user }}"
+  tags:
+    - common
+
